[package]
name = "tensorflow"
version = "0.17.0"
authors = ["Adam Crume <acrume@google.com>"]
description = "Rust language bindings for TensorFlow."
license = "Apache-2.0"
keywords = ["TensorFlow", "bindings"]
readme = "README.md"
repository = "https://github.com/tensorflow/rust"
documentation = "https://tensorflow.github.io/rust/tensorflow"
edition = "2018"

[lib]
# We want to run doctests, but they're broken by https://github.com/rust-lang/cargo/issues/8531.
doctest = false

# Prevent downloading or building TensorFlow when building docs on docs.rs.
[package.metadata.docs.rs]
features = ["private-docs-rs"]

[dependencies]
libc = "0.2.98"
num-complex = { version = "0.4.0", default-features = false }
tensorflow-internal-macros = { version = "=0.0.1", path = "tensorflow-internal-macros" }
tensorflow-sys = { version = "0.20.0", path = "tensorflow-sys" }
byteorder = "1.4.3"
crc = "2.0.0"
half = "1.7.1"
# This is used internally but not intended to be exposed through the API.
protobuf = "=2.23.0"
# Enables conversions between ndarray::Array objects and tensorflow::Tensor
ndarray = { version = "0.15.3", optional = true }
rustversion = "1.0.5"

[dev-dependencies]
random = "0.12.2"
serial_test = "0.5.1"
image = "0.23.14"

[features]
tensorflow_gpu = ["tensorflow-sys/tensorflow_gpu"]
tensorflow_unstable = []
eager = ["tensorflow-sys/eager"]
# This is for testing purposes; users should not use this.
examples_system_alloc = ["tensorflow-sys/examples_system_alloc"]
private-docs-rs = [] # DO NOT RELY ON THIS

[workspace]

[[example]]
name = "addition"

[[example]]
name = "expressions"
required-features = ["tensorflow_unstable"]

[[example]]
name = "regression"

[[example]]
name = "regression_savedmodel"

[[example]]
name = "regression_checkpoint"

[[example]]
name = "xor"

[[example]]
name = "mobilenetv3"