[package]
name = "tensorflow"
version = "0.21.0"
authors = ["Adam Crume <acrume@google.com>"]
description = "Rust language bindings for TensorFlow."
license = "Apache-2.0"
keywords = ["TensorFlow", "bindings"]
readme = "README.md"
repository = "https://github.com/tensorflow/rust"
documentation = "https://tensorflow.github.io/rust/tensorflow"
edition = "2018"
rust-version = "1.63.0"

[lib]
# We want to run doctests, but they're broken by https://github.com/rust-lang/cargo/issues/8531.
doctest = false

# Prevent downloading or building TensorFlow when building docs on docs.rs.
[package.metadata.docs.rs]
features = ["private-docs-rs", "tensorflow_unstable", "ndarray", "eager", "experimental"]

[dependencies]
libc = "0.2.132"
num-complex = { version = "0.4.2", default-features = false }
tensorflow-internal-macros = { version = "=0.0.3", path = "tensorflow-internal-macros" }
tensorflow-sys = { version = "0.24.0", path = "tensorflow-sys", optional = true }
tensorflow-sys-runtime = { version = "0.2.0", path = "tensorflow-sys-runtime", optional = true }
byteorder = "1.4.3"
crc = "3.0.0"
half = "2.1.0"
# This is used internally but not intended to be exposed through the API.
protobuf = "=2.27.1"
# Enables conversions between ndarray::Array objects and tensorflow::Tensor
ndarray = { version = "0.15.6", optional = true }
rustversion = "1.0.9"

[dev-dependencies]
rand = "0.8.5"
serial_test = "0.9.0"
tempfile = "3.7.0"

[features]
default = ["tensorflow-sys"]
experimental = ["tensorflow-sys/experimental"]
tensorflow_gpu = ["tensorflow-sys/tensorflow_gpu"]
tensorflow_unstable = []
tensorflow_runtime_linking = ["tensorflow-sys-runtime"]
eager = ["tensorflow-sys/eager"]
# This is for testing purposes; users should not use this.
examples_system_alloc = ["tensorflow-sys/examples_system_alloc"]
private-docs-rs = ["tensorflow-sys/private-docs-rs"] # DO NOT RELY ON THIS

[workspace]

[[example]]
name = "addition"

[[example]]
name = "expressions"
required-features = ["tensorflow_unstable"]

[[example]]
name = "regression"

[[example]]
name = "regression_savedmodel"

[[example]]
name = "regression_checkpoint"

[[example]]
name = "xor"

[[example]]
name = "mobilenetv3"
required-features = ["eager"]
