[package]
name = "libtensorflow-sys"
version = "0.0.1"
authors = ["Adam Crume <acrume@google.com>"]
build = "build.rs"
description = "Low-level Rust language bindings for TensorFlow.  This project is still under active development and not yet ready for widespread use."
license = "Apache-2.0"
keywords = ["TensorFlow", "bindings"]
repository = "https://github.com/google/tensorflow-rust"

[dependencies]
libc = "^0.2"

[build-dependencies]
bindgen = "^0.15"
