[package]
name = "libtensorflow-sys"
version = "0.0.2"
authors = ["Adam Crume <acrume@google.com>"]
build = "build.rs"
description = "This crate has been deprecated in favor of tensorflow-sys. Please use it instead."
license = "Apache-2.0"
keywords = ["TensorFlow", "bindings"]
repository = "https://github.com/google/tensorflow-rust"

[dependencies]
libc = "^0.2"

[build-dependencies]
bindgen = "^0.16"
