[package]
name = "tensorflow-internal-macros"
version = "0.0.1"
license = "Apache-2.0"
authors = [
  "Adam Crume <acrume@google.com>",
]
description = "The package provides macros for internal usage in TensorFlow. No backwards compatibility guarantees are made."
documentation = "https://tensorflow.github.io/rust"
homepage = "https://github.com/tensorflow/rust"
repository = "https://github.com/tensorflow/rust"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.9"
syn = { version = "1.0.73", features = ["extra-traits"] }
proc-macro2 = "1.0.27"