[package]
name = "tensorflow-sys"
version = "0.21.0"
license = "Apache-2.0"
authors = [
  "Adam Crume <acrume@google.com>",
  "Ivan Ukhov <ivan.ukhov@gmail.com>",
]
description = "The package provides bindings to TensorFlow."
documentation = "https://tensorflow.github.io/rust"
homepage = "https://github.com/tensorflow/rust"
repository = "https://github.com/tensorflow/rust"
build = "build.rs"
links = "tensorflow"
edition = "2018"

# Prevent downloading or building TensorFlow when building docs on docs.rs.
[package.metadata.docs.rs]
features = ["private-docs-rs"]

[dependencies]
libc = "0.2.98"
lazy_static = { version = "1.4", optional = true }
libloading = { version = "0.7", optional = true }
cfg-if = { version = "1.0", optional = true }
log = { version = "0.4", optional = true }

[build-dependencies]
curl = "0.4.38"
flate2 = "1.0.20"
pkg-config = "0.3.19"
semver = "1.0.3"
tar = "0.4.35"
zip = "0.5.13"

[features]
tensorflow_gpu = []
eager = []
runtime_linking = ["lazy_static", "libloading", "cfg-if", "log"]
# This is for testing purposes; users should not use this.
examples_system_alloc = []
private-docs-rs = [] # DO NOT RELY ON THIS
