[package]
name = "tensorflow-sys"
version = "0.23.0"
license = "Apache-2.0"
authors = [
  "Adam Crume <acrume@google.com>",
  "Ivan Ukhov <ivan.ukhov@gmail.com>",
  "Maciej Maślanka <maciej@contact.apurer.io>",
]
description = "The package provides bindings to TensorFlow."
documentation = "https://tensorflow.github.io/rust"
homepage = "https://github.com/tensorflow/rust"
repository = "https://github.com/tensorflow/rust"
build = "build.rs"
links = "tensorflow"
edition = "2018"

# Prevent downloading or building TensorFlow when building docs on docs.rs.
[package.metadata.docs.rs]
features = ["private-docs-rs"]

[dependencies]
libc = "0.2.132"
lazy_static = { version = "1.4.0", optional = true }
libloading = { version = "0.7.3", optional = true }
cfg-if = { version = "1.0.0", optional = true }
log = { version = "0.4.17", optional = true }

[build-dependencies]
curl = "0.4.44"
flate2 = "1.0.24"
pkg-config = "0.3.25"
semver = "1.0.13"
tar = "0.4.38"
zip = "0.6.4"

[features]
tensorflow_gpu = []
eager = []
experimental = []
# This is for testing purposes; users should not use this.
examples_system_alloc = []
private-docs-rs = [] # DO NOT RELY ON THIS
